--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
 
             <form action="">
                 <input type="text" id="input-box" placeholder="Add your text">
-                <button onclick="addTask()" id="add-button">Add</button>
+                <button onclick="addTask()" id="add-git branch -M main
+                button">Add</button>
             
 
-            <div class="select">
+            <!-- <div class="select">
                 <select name="todos" class="filter-todo"></select>
                 <option value="all">All</option>
                 <option value="completed">Completed</option>
                 <option value="uncompleted">Uncompleted</option>
-            </div>
+            </div> -->
 
 
             </form>
